<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.entrant.SearchEventsFragment">

    <SearchView
        android:id="@+id/eventSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:queryHint="Search events"
        android:iconifiedByDefault="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.fragment.app.FragmentContainerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/eventListContainer"
        app:layout_constraintTop_toBottomOf="@id/eventSearch"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
