...
            android:gravity="center_vertical"
            android:layout_marginTop="8dp"
            android:paddingStart="17dp"
            android:paddingEnd="17dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Event Title"
                android:layout_gravity="top"
                android:textAppearance="?attr/textAppearanceHeadline6" />
...
